<resources>
    <string name="app_name">Ordering And Inventory Management System</string>
    <string name="title_people">People</string>
    <string name="title_orders">Orders</string>
    <string name="title_inventory">Inventory Details</string>
    <string name="inventory">Inventory</string>
    <string name="inventory_details">Inventory Details</string>
    <string name="Item">Item</string>
    <string name="Category">Category</string>
    <string name="Location">Location</string>
    <string name="Manufacturer">Manufacturer</string>
    <string name="Supplier">Supplier</string>
    <string name="Model">Model</string>
    <string name="ID">ID</string>
    <string name="Description">Description</string>
    <string name="Remarks">Remarks</string>
    <string name="Reorder_level">Reorder Level</string>
    <string name="Target_level">Target Stock Level</string>
    <string name="Discontinued">Discontinued</string>
    <string name="Cancel">Cancel</string>
    <string name="Edit">Edit</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="Add">Add</string>
    <string name="AddNewProduct">Add New Product</string>
    <string name="Back">Back</string>
    <string name="Staff_login">Staff Login</string>
    <string name="Username">Username: </string>
    <string name="Password">Password: </string>
    <string name="Successful_login">You have successfully logged in.</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="current_stock">Current stock</string>
    <string name="unit_price">Unit price</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="status">Status</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="left_arrow">\u003C</string>
    <string name="right_arrow">\u003E</string>
    <string-array name="product_category">
        <item></item>
        <item>Bag</item>
        <item>Bottom</item>
        <item>Cap</item>
        <item>Shoes</item>
        <item>Socks</item>
        <item>Top</item>
    </string-array>

    <!--Added by HX-->
    <string name="Customer">Customer</string>
    <string name="Email_Address">E-mail Address</string>
    <string name="Salesperson">Salesperson</string>
    <string name="Order_Date">Order Date</string>
    <string name="Order_Details">Order Details</string>
    <string name="Shipping_Information">Shipping Information</string>
    <string name="Payment_Information">Payment Information</string>
    <string name="Update_Order_Status">Update Order Status</string>
    <string name="Create_Invoice">Create Invoice</string>
    <string name="Order_Status">Order Status</string>
    <string name="Create_Order">Create Order</string>
    <string name="Create_New_Order">Create New Order</string>
    <string name="Order_History">Order History</string>
    <string name="Sales_Report">Sales Report</string>
    <string name="Order_ID">Order ID</string>
    <string name="Total_Amount">Total Amount</string>
    <string name="Address">Address:</string>
    <string name="no_payment_info">Payment is not yet made by the customer.</string>
    <string name="Product">Product</string>
    <string name="Discount">Discount</string>
    <string name="Total_Price">Total Price</string>
    <string name="Add_Product">Add Product</string>
    <string name="Percent">%</string>
</resources>